# volo_testing

./: .gitignore  .gitmodules  Cargo.toml
idl/: service.thrift
src/: lib.rs
the_example/: Cargo.toml
the_example/src/: lib.rs
volo-gen/: Cargo.toml  build.rs  volo.yml
volo-gen/src/: lib.rs
