[package]
name = "the_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volo.workspace = true
anyhow.workspace = true
volo-gen.workspace = true
volo-thrift.workspace = true
async-trait.workspace = true
pilota.workspace = true
tokio = { version = "1", features = ["full"] }
backoff = { version = "0.4.0", features = ["async-std"] }
log = "0.4.17"
env_logger = "0.9.1"
chrono = "0.4.22"
