[[bin]]
name = "example_server"
path = "src/bin/server.rs"

[package]
name = "the_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volo-gen.workspace = true
volo.workspace = true
volo-thrift.workspace = true
pilota.workspace = true

anyhow.workspace = true
async-trait.workspace = true
tokio = { version = "1", features = ["full"] }
backoff = { version = "0.4.0", features = ["async-std"] }
log = "0.4.17"
env_logger = "0.9.1"
chrono = "0.4.22"
